2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* check-results.sh: New script.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Renamed options --linux to --uclibc and --no-linux
	to --no-uclibc and changed associated variable from linux to
	uclibc throughout.
	* run-uclibc-tests.sh: Renamed bd_linux as bd_uclibc,
	logfile_linux as logfile_uclibc and res_linux as res_uclibc
	throughout. Use uclibc instead of linux in logfile and results
	file names.
	* symlink-trunks.sh: Deleted.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Renamed from build-linux.sh to avoid confusion.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-uclibc.sh: enable building gdbserver.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Updated for arc-uclibc-mainline branch of
	uClibc and arc-3.8-ABI-v3 for Linux.
	* build-uclibc.sh: No need for -DARC_LEGACY_PTRACE_ABI with
	gdbserver. Temporarily disable building gdbserver while fixing
	header problems.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/telnet-extra.exp (telnet_spawn): Remove duplicate line.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-elf32-tests.sh, run-uclibc-tests.sh: Make build directories
	endian and tool chain release specific.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh, build-uclibc.sh: Use release specific build
	directory names.

2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-elf32-tests.sh: Replace bd_elf_gdb with bd_elf throughout.

2013-03-25  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Build GDB.
	* build-linux.sh: Ensure we have the right tool chain on the path.
	* build-uclibc.sh: Tidy up commenting.
	* dejagnu/baseboards/arc-linux-generic.exp: Set up sysroot command
	file.
	* dejagnu/ftp-extra.exp (make_relative): Correct typo for prefix.